# rial

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README  README.md  build.sbt  index.html  index.js
.github/workflows/: document.yml
clib/: CMakeLists.txt
clib/arith/: CMakeLists.txt  ecc.c  ecc.h  fpmd.c  fpmd.h  inv_table.h  mdg_threefry.c  mdg_threefry.h  mt.c  mt.h  random.c  random.h  scale.c  scale.h  softplus.c  softplus.h  test_softplus.c
clib/include/: defs.h  md.h  mdg4a_atom.h  r2sqrt.h  rinv.h  rinv3.h  sv_vpi_user.h  svdpi_compatibility.h
clib/table/: CMakeLists.txt  chebyshev.c  chebyshev.h  gen_funcev.c  gen_funcev.h  gen_generic.c  gentable.c  gentable.h  nonbond_functions.c  nonbond_functions.h
crial/: crial$.html  index.html
rial/: index.html
rial/arith/: AddFP64.html  AddFP64_driver$.html  AddFPGeneric.html  FloatChiselUtil$.html  FusedMulAddFP64.html  FusedMulAddFP64_driver$.html  FusedMulAddFPGeneric.html  MultFP64.html  MultFPGeneric.html  MultFPInt64.html  MultFPIntGeneric.html  RealGeneric$.html  RealGeneric.html  RealSpec$.html  RealSpec.html  RoundSpec$$ceil$.html  RoundSpec$$ceilToInfinite$.html  RoundSpec$$round$.html  RoundSpec$$roundToEven$.html  RoundSpec$$truncate$.html  RoundSpec$$truncateToZero$.html  RoundSpec$.html  RoundSpec.html  Rounding$.html  index.html
rial/ecc/: CRC$.html  CRCcore.html  CRCcoreGen_16_16$.html  CRCcoreGen_1_32$.html  Fletcher.html  index.html
rial/fixed/: FixedSpec.html  FixedToFloatGeneric.html  FloatToFixedGeneric.html  ScaledFixedToFloatGeneric.html  index.html
rial/math/: FuncKind$.html  MathFuncConfig$.html  MathFuncConfig.html  MathFuncPipelineConfig$.html  MathFuncPipelineConfig.html  MathFuncUnitBF16.html  MathFuncUnitBF16_driver$.html  MathFuncUnitFP32.html  MathFuncUnitFP32_driver$.html  MathFunctions.html  PolynomialEval.html  PolynomialSpec.html  index.html
rial/rng/: BoxMuller.html  BoxMullerPipelineConfig$.html  BoxMullerPipelineConfig.html  GenRandomFloat01.html  GenRandomFloat01Close.html  GenRandomFloat01Full.html  GenRandomFloat01FullPipe.html  GenRandomFloat12.html  HTBoxMuller.html  HTBoxMullerConfig.html  IrwinHall.html  IrwinHallGenerator.html  Squares32.html  index.html  (+4 more)
(+252 files in other folders)
